@@ -1,3 +1,10 @@
+2004-11-09  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load):
+	  fix unused variable `i'
+	* w3mimg/x11/x11_w3mimg.c (x11_load_image):
+	  ditto
+
 2004-11-09  Hiroyuki Ito <ZXB01226@nifty.com>
 
 	* [w3m-dev 04128] Re: w3mimgdisplay
@@ -8605,4 +8612,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.941 2004/11/08 17:08:09 ukai Exp $
+$Id: ChangeLog,v 1.942 2004/11/08 17:14:06 ukai Exp $
